Fix horizontal scrollbar
Change mobile mode to 600px

--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 h1,
@@ -43,24 +44,23 @@ a {
 }
 
 .container {
-    max-width: 1000px;
+    max-width: 1200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    contain: layout;
-    padding: 0 3rem 0 3rem;
+    padding: 0 3rem;
 }
 
 .bio::before {
     content: "";
-    width: 3000px;
-    height: 1000px;
+    width: 2300px;
+    height: 500px;
     background-color: var(--bg-color);
     position: absolute;
     z-index: -1;
-    top: -800px;
-    left: -800px;
+    top: -300px;
+    left: -200px;
     transform: rotate(-15deg);
     -webkit-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
     -moz-box-shadow: 0px 3px 10px -3px rgba(0, 0, 0, 0.64);
@@ -124,7 +124,7 @@ a {
 }
 
 .projects {
-    margin: 200px 0 200px 0;
+    margin: 200px 0;
 }
 
 .projects-container {
@@ -226,7 +226,7 @@ footer {
     }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .projects-container {
         grid-template-columns: 1fr;
     }
